--- a/styles/base.css
+++ b/styles/base.css
@@ -60,6 +60,7 @@ body {
 }
 .card {
 	grid-column: auto;
+	padding:block;
 	display: inline-table;
 	column-gap: 20px;
 }
@@ -68,6 +69,10 @@ h2 {
 	background-color: blue;
 	color: white;
 	padding: 1rem;
+
+}
+h3 {
+	text-align: center;
 }
 h4{
 	text-align: center;
