--- a/styles/base.css
+++ b/styles/base.css
@@ -7,12 +7,7 @@ h1 {
 	border: 0rem;
 
 }
-nav {
-	background: black;
-	color: white;
-	text-align: center;
 
-	padding: 20px;
 }
 footer {
 	background-color: blue;
@@ -32,13 +27,9 @@ body {
 	grid-template: auto 1fr auto / 300px 1fr auto;
   }
 
-
-
-
-
-.navigation {
+  .navigation {
 	list-style: none;
-	display: flex;
+	display: grid;
 	background-color: #333;
 	align-items: center;
 }
@@ -53,11 +44,10 @@ body {
 	text-align: center;
 /* 	border: 1px dotted cyan; */
 }
-.navigation a:hover {
-	font-weight: 700;
-	text-decoration: underline;
-	text-decoration-color: yellow;
-}
+
+
+
+
 .card {
 	grid-column: auto;
 	padding:block;
